Started working on calculating the zeeman effect. Code not functional yet.

--- a/report/NotesOnBfield.tex
+++ b/report/NotesOnBfield.tex
@@ -136,5 +136,6 @@ The power dissipated is just $RI^{2}$ and as a scaling law:
 If we want to dissipate as minimum heat as we can, thicker wire and maximize the number of turns in the solenoid is desired. If the number of turn in the solenoid is increased by a factor of f then the dissipated power is reduced by a fact of f. Considering a 1.5 mm radius wire and $\rho_{copper} = 0.0171$ $\Omega$ mm $^{2}$/m, and a solenoid with 4 turns, that gives a total lentgh of about 1 m, a total resistance of about 2 m$\Omega$ and $I = 20$ A, then 1 W will be dissipated as heat on each solenoid.
 
 
+\section{Zeeman effect on $^{87}$Rb}
 
 \end{document}
