Added ref. Modified B calculation to CHADOQ parameters. Wrote a bit more on Notes.

--- a/report/NotesOnBfield.tex
+++ b/report/NotesOnBfield.tex
@@ -221,7 +221,7 @@ Considering higher fields, then the Zeeman Hamiltonian will mix the states of F 
 
 The goal is to initialize the qubits in a given state. Considering optical pumping techniques, it is chosen to prepare the atoms in the state $\ket{5S_{1/2}, F,m_{f} = 2,2}$ and the pumping scheme is shown on figure \ref{OpticalPumping}. The experiment starts with the atoms populating all the Zeeman levels in the ground hyperfine states. The optical pumping laser at 780 nm is prepared such that it addresses $\sigma^{+}$ transitions from $\ket{5S_{1/2}, F=2}$ $\rightarrow$ $\ket{5P_{3/2}, F=2}$ with $\Delta m_{f} = +1$. In this way, when the an atom populate the level $\ket{5S_{1/2}, F=2, m_{f}=2}$, the laser-atom interaction is stopped, avoiding unneccessary heating. 
 
-The atoms initially populated in the $\ket{5S_{1/2}, F=1}$ are not excited by the optical pumping laser, being off resonance. In order to pump those atoms into the deired state, a repumper laser is used to pump those atoms in the $\ket{5P_{3/2}, F=2}$ and then they eventually decay to $\ket{5S_{1/2}, F=2}$ where they enter in the optical pumping system. 
+The atoms initially populated in the $\ket{5S_{1/2}, F=1}$ are not excited by the optical pumping laser, being off resonance. In order to pump those atoms into the desired state, a repumper laser is used to pump those atoms in the $\ket{5P_{3/2}, F=2}$ and then they eventually decay to $\ket{5S_{1/2}, F=2}$ where they enter in the optical pumping system. 
 
 \begin{figure}[t]
     \includegraphics[width=0.8\linewidth]{OpticalPumpingScheme}
@@ -230,7 +230,7 @@ The atoms initially populated in the $\ket{5S_{1/2}, F=1}$ are not excited by th
     \label{OpticalPumping}
 \end{figure}
 
-THe diagnostics is performed with 
+The diagnostics is performed with a two-photons Raman transition connecting the qubit states with a 600 MHz detuning from the $5P_{1/2}$ transition at 795 nm. The scheme is shown on figure \ref{OpticalPumping}.
 
 
 
